# proc-decam

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-image.yml  test.yml  tests.yml
etc/: worker_setup.sh
pipelines/: DRP.yaml  bias.yaml  flat.yaml  inject.yaml  mean-template.yaml  meanclip-template.yaml  median-template.yaml  min-template.yaml  recovery.yaml  science.yaml  submit.yaml  template.yaml  viz.sh
pipelines/DRP/step0/: pipeline.dot
pipelines/DRP/step1/: pipeline.dot
pipelines/DRP/step1b/: pipeline.dot
pipelines/DRP/step2a/: pipeline.dot
pipelines/DRP/step2b/: pipeline.dot
pipelines/DRP/step2c/: pipeline.dot
pipelines/DRP/step2d/: pipeline.dot
pipelines/DRP/step2e/: pipeline.dot
pipelines/DRP/step2f/: pipeline.dot
pipelines/DRP/step3a/: pipeline.dot
pipelines/DRP/step3b/: pipeline.dot
pipelines/DRP/step3c/: pipeline.dot
pipelines/DRP/step3d/: pipeline.dot
pipelines/DRP/step4a/: pipeline.dot
pipelines/DRP/step4b/: pipeline.dot
pipelines/DRP/step4c/: pipeline.dot
pipelines/DRP/step4d/: pipeline.dot
pipelines/DRP/step4e/: pipeline.dot
pipelines/bias/step1/: pipeline.dot
pipelines/bias/step2/: pipeline.dot
pipelines/flat/step0/: pipeline.dot
pipelines/flat/step1/: pipeline.dot
src/proc_decam/: _version.py  associate.py  cli.py  coadd.py  collection.py  db.py  decertify.py  defects.py  download.py  execute.py  exposures.py  fakes.py  ingest.py  night.py  pipeline.py  qgraph.py  raw.py  refcats.py  retries.py
tests/: make_exposures.py  test.bash  test_pipeline_api.py
(+16 files in other folders)
